# epml

./: hw1.html
.github/workflows/: docs.yml
iris-mlops/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bandit.yaml  dvc.yaml  mkdocs.yml  pixi.toml  pyproject.toml
iris-mlops/.dvc/: .gitignore  config
iris-mlops/airflow/dags/: iris_hw4_pipeline.py
iris-mlops/clearml/: .env.example  docker-compose.yml
iris-mlops/configs/hw4/: config.yaml
iris-mlops/configs/hw5/: config.yaml
iris-mlops/configs/hw5/model/: logreg.yaml  rf.yaml  svc.yaml
iris-mlops/docs/: deployment.md  index.md  usage.md
iris-mlops/docs/reports/: index.md
iris-mlops/reports/: hw3_wandb.md  hw4_airflow.md  hw5_clearml.md  hw6_docs.md  report.md
iris-mlops/reports/hw3/: wandb_experiments_summary.csv
iris-mlops/reports/hw4/: metrics_logreg.json  metrics_rf.json  metrics_svc.json  summary.json  summary.md
iris-mlops/reports/hw5/: clearml_experiments_summary.csv
iris-mlops/scripts/: get_data.py  hw4_generate_screenshots.py  hw4_get_data.py  hw4_notify.py  hw4_prepare.py  hw4_select_best.py  hw4_train.py  hw5_clearml_compare.py  hw5_clearml_experiments.py  hw5_clearml_list_models.py  hw5_clearml_pipeline.py  hw5_clearml_scheduler.py  hw5_clearml_smoke.py  hw5_clearml_train.py  hw5_generate_screenshots.py  hw6_generate_docs.py  list_models.py  train_model.py  wandb_experiments.py  wandb_query_runs.py
iris-mlops/src/iris_mlops/: __init__.py
iris-mlops/src/iris_mlops/tracking/: __init__.py  wandb_utils.py
template_mlops/: README.md.jinja  copier.yml
template_mlops/configs/: base.yaml
template_mlops/src/{{ package_name }}/models/: __init__.py
